2007-03-27  Thien-Thi Nguyen  <ttn@gnu.org>

	* message.el (message-yank-original): Fix bug:
	Don't switch point and mark unnecessarily.

2007-03-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-put-addresses-in-ecomplete): Only fetch headers
	from the message heads.

2007-03-25  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-art.el (gnus-article-set-window-start): Do nothing when the
	article buffer does not have a window.  This may not be the best
	solution but is certainly better than setting the start of the null,
	that is the current, window.

2007-03-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-draft.el (gnus-draft-setup-hook): New hook.
	(gnus-draft-setup): Run it.

	* gnus-score.el (gnus-inhibit-slow-scoring): New variable, renamed from
	gnus-score-fast-scoring.  Allow regexp.
	(gnus-score-headers): Use it.

	* gnus-util.el (gnus-emacs-version): Include "no MULE" in no-MULE
	XEmacs.

	* gnus-art.el (gnus-article-browse-html-article): Fix typo in doc
	string.
	(gnus-button-alist): Also catch `<f1> k ...'.
	(gnus-treat-display-x-face): Fix doc string.

2007-03-25  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus-msg.el (gnus-setup-message, gnus-inews-add-send-actions): Move
	evaluation of gnus-extended-version to ensure correct generation of the
	User-Agent header when message-generate-headers-first is used.

2007-03-24  Simon Josefsson  <simon@josefsson.org>

	* hashcash.el (hashcash-generate-payment-async): Don't crash if
	hashcash-path is nil.  Don't call callback with incorrect number of
	parameters if val is 0.

2007-03-20  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* message.el (message-required-news-headers):
	* gnus-util.el (gnus-intern-safe): Fix typo in docstring.

2007-03-18  Thien-Thi Nguyen  <ttn@gnu.org>

	* tls.el (open-tls-stream): In handshake-waiting loop,
	don't wait more if there is output available to process.

2007-03-17  Thien-Thi Nguyen  <ttn@gnu.org>

	* tls.el (tls-program): Doc fix.
